--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "@ecovetka-store/server",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -17,11 +17,6 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "@types/node": "^22.13.5",
-    "prettier": "^3.5.2",
-    "rimraf": "^6.0.1",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.3"
+    "@types/node": "^22.13.5"
   }
 }
