--- a/package.json
+++ b/package.json
@@ -3,25 +3,45 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev:client": "npm run dev --prefix packages/client",
-    "dev:server": "npm run dev --prefix packages/server",
-    "dev:all": "npm run dev:client & npm run dev:server",
     "build:client": "npm run build --prefix packages/client",
     "build:server": "npm run build --prefix packages/server",
-    "build:all": "npm run build:client & npm run build:server",
+    "build": "npm run build:client & npm run build:server",
+    "dev:client": "npm run dev --prefix packages/client",
+    "dev:server": "npm run dev --prefix packages/server",
+    "dev": "npm run dev:client & npm run dev:server",
+    "lint:client": "npm run lint --prefix packages/client",
+    "lint:server": "npm run lint --prefix packages/server",
+    "lint": "npm run lint:client & npm run lint:server",
+    "lint-staged": "lint-staged",
+    "prettify:client": "npm run prettify --prefix packages/client",
+    "prettify:server": "npm run prettify --prefix packages/server",
+    "prettify": "npm run prettify:client & npm run prettify:server",
     "types:client": "npm run types --prefix packages/client",
     "types:server": "npm run types --prefix packages/server",
-    "types:all": "npm run types:client & npm run types:server"
+    "types": "npm run types:client & npm run types:server",
+    "prepare": "husky || true"
   },
   "workspaces": [
     "packages/server",
     "packages/client"
   ],
   "devDependencies": {
+    "@eslint/js": "^9.19.0",
+    "@stylistic/eslint-plugin-js": "^4.0.1",
+    "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.18",
+    "globals": "^15.14.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
     "prettier": "^3.5.2",
     "rimraf": "^6.0.1",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.7.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.22.0"
   }
 }
