--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -17,6 +17,7 @@
     "@trpc/react-query": "^10.37.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "server": "*"
   },
   "devDependencies": {
