--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -14,11 +14,14 @@
   "dependencies": {
     "@trpc/server": "^10.37.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "lodash": "^4.17.21",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^22.13.5"
   }
 }
