--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "rimraf ./dist && tsc --build ./tsconfig.json",
-    "dev": "ts-node-dev --rs ./src/index.ts",
+    "dev": "nodemon --exec node --loader ts-node/esm src/index.ts",
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "prettify": "prettier --loglevel warn --cache --write '{src/**/*,*}.{ts,tsx,js,json,yml,scss}' '!**/{node_modules,dist}/**/*'",
     "start": "node ./dist/index.js",
@@ -22,6 +22,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/lodash": "^4.17.15",
-    "@types/node": "^22.13.5"
+    "@types/node": "^22.13.5",
+    "nodemon": "^3.1.9"
   }
 }
