--- a/packages/server/tsconfig.json
+++ b/packages/server/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "ts-node": {
     "files": true,
-    "transpileOnly": true
+    "transpileOnly": true,
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
   },
   "compilerOptions": {
     "outDir": "./dist",
@@ -18,10 +20,10 @@
     "resolveJsonModule": true,
     "inlineSources": true,
     "isolatedModules": false,
-    "lib": ["ES2021"],
-    "module": "commonjs",
+    "lib": ["ES2021", "ESNext", "DOM"],
+    "module": "ESNext",
     "moduleResolution": "Node",
-    "target": "ES2021"
+    "target": "ESNext"
   },
   "include": ["src"]
 }
