--- a/packages/client/.lintstagedrc.yml
+++ b/packages/client/.lintstagedrc.yml
@@ -2,3 +2,7 @@
   - "eslint --cache --cache-location ./node_modules/.cache/.eslintcache --fix"
   - "prettier --loglevel warn --cache --write"
 "*.{json,yml,scss}": "prettier --loglevel warn --cache --write"
+"*.scss":
+  - "stylelint --cache --cache-location ./node_modules/.cache/.stylelintcache --fix"
+  - "prettier --loglevel warn --cache --write"
+"*.{json,yml}": "prettier --loglevel warn --cache --write"
