--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "prettify": "prettier --loglevel warn --cache --write '{src/**/*,*}.{ts,tsx,js,json,yml,scss}' '!**/{node_modules,dist}/**/*'",
-    "stylelint": "stylelint --cache --cache-location ./node_modules/.cache/.stylelintcache src/**/*.scss",
+    "stylelint": "stylelint src/**/*.scss",
     "stylecheck": "sass --update -q ./src:./node_modules/.cache/.stylecheckcache",
     "types": "tsc --noEmit --project ./tsconfig.json && tsc --noEmit --project ./tsconfig.node.json && tsc --noEmit --project ./tsconfig.app.json"
   },
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^4.32.6",
     "@trpc/client": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
+    "formik": "^2.4.6",
     "include-media": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
