--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -18,13 +18,15 @@
     "@trpc/client": "^10.37.1",
     "@trpc/react-query": "^10.37.1",
     "formik": "^2.4.6",
+    "formik-validator-zod": "^2.2.0",
     "include-media": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "reset-css": "^5.0.2",
     "sass": "^1.85.1",
-    "server": "*"
+    "server": "*",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/react": "^19.0.8",
