--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,17 +5,25 @@
   "type": "module",
   "scripts": {
     "build": "rimraf ./dist && tsc --build ./tsconfig.json",
-    "dev": "nodemon --exec node --loader ts-node/esm src/index.ts",
+    "dev": "nodemon --trace-warnings --exec node --loader ts-node/esm src/index.ts",
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "prettify": "prettier --loglevel warn --cache --write '{src/**/*,*}.{ts,tsx,js,json,yml,scss}' '!**/{node_modules,dist}/**/*'",
+    "prismamd": "prisma migrate dev",
+    "prismagc": "prisma generate",
     "start": "node ./dist/index.js",
-    "types": "tsc --noEmit --project ./tsconfig.json"
+    "types": "tsc --noEmit --project ./tsconfig.json",
+    "prepare": "npm run prismagc"
+  },
+  "prisma": {
+    "schema": "./src/prisma/schema.prisma"
   },
   "dependencies": {
+    "@prisma/client": "^6.4.1",
     "@trpc/server": "^10.37.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
+    "superjson": "^2.2.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -23,6 +31,7 @@
     "@types/express": "^4.17.17",
     "@types/lodash": "^4.17.15",
     "@types/node": "^22.13.5",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "prisma": "^6.4.1"
   }
 }
