--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,7 +21,9 @@
     "@prisma/client": "^6.4.1",
     "@trpc/server": "^10.37.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
+    "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "passport": "^0.7.0",
@@ -37,6 +39,8 @@
     "@types/node": "^22.13.5",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
+    "eslint-plugin-n": "^17.16.2",
+    "eslint-plugin-node": "^11.1.0",
     "nodemon": "^3.1.9",
     "prisma": "^6.4.1"
   }
