--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -26,12 +26,14 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.15.0",
+    "react-use": "^17.6.0",
     "reset-css": "^5.0.2",
     "sass": "^1.85.1",
     "server": "*",
     "superjson": "^2.2.2",
     "usehooks-ts": "^3.1.1",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
