--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -12,6 +12,7 @@
     "prismagc": "prisma generate",
     "start": "node ./dist/index.js",
     "types": "tsc --noEmit --project ./tsconfig.json",
+    "test": "jest",
     "prepare": "npm run prismagc"
   },
   "prisma": {
