--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "types:client": "npm run types --prefix packages/client",
     "types:server": "npm run types --prefix packages/server",
     "types": "npm run types:client & npm run types:server",
+    "test:client": "npm run test --prefix packages/client",
+    "test:server": "npm run test --prefix packages/server",
+    "test": "npm run test:client & npm run test:server",
     "prepare": "husky || true"
   },
   "workspaces": [
@@ -30,17 +33,21 @@
   "devDependencies": {
     "@eslint/js": "^9.19.0",
     "@stylistic/eslint-plugin-js": "^4.0.1",
+    "@types/jest": "^29.5.14",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "husky": "^9.1.7",
+    "jest": "^29.7.0",
     "lint-staged": "^15.4.3",
     "prettier": "^3.5.2",
     "rimraf": "^6.0.1",
+    "ts-jest": "^29.2.6",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3",
