--- a/package.json
+++ b/package.json
@@ -34,8 +34,11 @@
     "@eslint/js": "^9.19.0",
     "@stylistic/eslint-plugin-js": "^4.0.1",
     "@types/jest": "^29.5.14",
+    "@typescript-eslint/parser": "^8.27.0",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
+    "eslint-import-resolver-typescript": "^4.2.2",
+    "eslint-plugin-import-x": "^4.9.1",
     "eslint-plugin-jest": "^28.11.0",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
