Интеграционные тесты, настройка eslint, создание базы данных под тетсты

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -4,13 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "build": "rimraf ./dist && tsc --build ./tsconfig.json",
-    "dev": "nodemon --trace-warnings --exec node --loader ts-node/esm src/index.ts",
+    "build": "rimraf ./dist && tsc --build ./tsconfig.build.json",
+    "dev": "cross-env NODE_ENV=development nodemon --trace-warnings --exec node --loader ts-node/esm src/index.ts",
     "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
     "prettify": "prettier --loglevel warn --cache --write '{src/**/*,*}.{ts,tsx,js,json,yml,scss}' '!**/{node_modules,dist}/**/*'",
     "prismamd": "prisma migrate dev",
     "prismagc": "prisma generate",
-    "start": "node ./dist/index.js",
+    "prismamtest": "dotenv -e ./.env.test prisma migrate deploy",
+    "start": "cross-env NODE_ENV=production node ./dist/server/src/index.js",
     "types": "tsc --noEmit --project ./tsconfig.json",
     "test": "jest  --runInBand",
     "prepare": "npm run prismagc"
@@ -22,7 +23,6 @@
     "@prisma/client": "^6.4.1",
     "@trpc/server": "^10.37.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
@@ -40,6 +40,8 @@
     "@types/node": "^22.13.5",
     "@types/passport": "^1.0.17",
     "@types/passport-jwt": "^4.0.1",
+    "dotenv": "^16.4.7",
+    "dotenv-cli": "^8.0.0",
     "eslint-plugin-n": "^17.16.2",
     "eslint-plugin-node": "^11.1.0",
     "nodemon": "^3.1.9",
