--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@stylistic/eslint-plugin-js": "^4.0.1",
     "@types/jest": "^29.5.14",
     "@typescript-eslint/parser": "^8.27.0",
+    "cross-env": "^7.0.3",
     "eslint": "^9.19.0",
     "eslint-config-prettier": "^10.0.1",
     "eslint-import-resolver-typescript": "^4.2.2",
